syntax = "proto3";

package hashmap;
option go_package = "github.com/dehwyy/makoto/libs/grpc/generated/hashmap";

import "general.proto";

service HashmapRPC {
  rpc GetItems(GetItemsPayload) returns (GetItemsResponse);
  rpc GetTags(general.UserId) returns (GetTagsResponse);
  rpc CreateItem(CreateItemPayload) returns (CreateItemResponse);
  rpc RemoveItem(RemoveItemPayload) returns (general.IsSuccess);
  rpc EditItem(EditItemPayload) returns (general.IsSuccess);
}

message GetItemsPayload {
  string user_id = 1;
  int32 part = 2; // default should be 0;
  int32 part_size = 3;
  string query = 4;

  message FilterTags {
    string text = 1;
    bool include = 2;
  } // if include -> selected, have to be on item, else -> should not appear in item's tags

  repeated FilterTags tags = 5;
}

message GetItemsResponse {
  repeated Item items = 1;
}

message GetTagsResponse {
  repeated Tag tags = 1;
}

message CreateItemPayload {
  string user_id = 1;
  string key = 2;
  string value = 3;
  string extra = 4;
  repeated string tags = 5;
}

message CreateItemResponse {
  uint32 id = 1;
}

message RemoveItemPayload {
  string user_id = 1;
  uint32 item_id = 2;
}

message EditItemPayload {
  string user_id = 1;
  uint32 item_id = 2;
  string key = 3;
  string value = 4;
  string extra = 5;
  repeated string tags = 6;
}


message Item {
  uint32 id = 1;
  string key = 2;
  string value = 3;
  string extra = 4;
  repeated Tag tags = 5;
}

message Tag {
  string text = 1;
  uint32 usages = 2;
}
